--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: olegtarasov/get-tag@v2.1.2
           id: tagName
+          with:
+            tagRegex: "(.*)"
 
       - uses: actions/checkout@v2
         with:
